# Auto-AWD

./: .gitignore  LICENSE  Pipfile  README.md  awd.py  config.template.yml  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  config.py  const.py  data.py  db.py  engine.py  exception.py  item.py  log.py  pipeline.py  utils.py
core/piper/: __init__.py  basePiper.py  dbPiper.py  flagPiper.py  funcPiper.py  logPiper.py  pipeline.py
core/service/: __init__.py  monitor.py
payloads/: exp.py.template
tests/: __init__.py  conftest.py  test_config.py  test_pipeline.py
